--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,6 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 99999999;
 
   min-width: 600px;
   width: 100%;
